corrections css wrapper overflow

--- a/public_portal/css/layout.css
+++ b/public_portal/css/layout.css
@@ -2,13 +2,37 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400i,900");
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,300i,600");
 /***** colors ****/
-main {
-  margin: 100px 100px 100px 340px;
-  border: 1px solid green;
 
-  position: relative;
-  height: calc(100vh - 200px);
+/* apply a natural box layout model to all elements, but allowing components to change */
+html {
+  box-sizing: border-box;
 }
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+body {
+  position: relative;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+#main-wrapper {
+  width: 100%;
+  height: 100vh;
+  padding: 76px 30px 79px 270px;
+}
+
+main {
+  position: relative;
+  min-height: 100%;
+  max-height: calc(100vh - 155px);
+  min-width: 100%;
+  border: 1px solid green;
+  overflow-y: auto;
+}
+
+
 
 /****** HEADER ******/
 #tpk-topnavbar.tpk-header-navbar {
@@ -535,7 +559,7 @@ main {
 
 /****** FOOTER ******/
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
